@@ -1,3 +1,5 @@
+- Bug fix: Numeric memberIDs where not being handled correctly according to the specification
+
 2.7.0 (28-09-2020)
 - New feature: Sending proof of address only when address was authorized in GDPR
 - Bug fix: Corrected MaritalSTatus codes sent in CGDForm43 web service
